common/force-app/main/default/objects/Membership__c/fields/Contacted_Certifier__c.field-meta.xml
<CustomField>
    <fullName>Contacted_Certifier__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Wholesale RT Only</inlineHelpText>
    <label>Contacted Certifier</label>
    <type>Checkbox</type>
</CustomField>