common/force-app/main/default/objects/Membership__c/fields/Eligible_from__c.field-meta.xml
<CustomField>
    <fullName>Eligible_from__c</fullName>
    <label>Eligible from</label>
    <type>Date</type>
</CustomField>