common/force-app/main/default/objects/Membership__c/fields/EMMA_test_no_ren__c.field-meta.xml
<CustomField>
    <fullName>EMMA_test_no_ren__c</fullName>
    <description>Counts the number of Membership Renewals related to each membership so that the number of days until the date of membership expiry is not calculated for those investors which have an old expired membership</description>
    <label>Number of Renewals</label>
    <summaryForeignKey>Membership_Renewal__c.Membership__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>