common/force-app/main/default/objects/Membership__c/fields/Membership_Approved__c.field-meta.xml
<CustomField>
    <fullName>Membership_Approved__c</fullName>
    <label>Membership Approved</label>
    <type>Date</type>
</CustomField>