common/force-app/main/default/objects/Membership__c/fields/Membership_Declined__c.field-meta.xml
<CustomField>
    <fullName>Membership_Declined__c</fullName>
    <label>Membership Declined</label>
    <type>Date</type>
</CustomField>