common/force-app/main/default/objects/Membership__c/fields/Membership_Note__c.field-meta.xml
<CustomField>
    <fullName>Membership_Note__c</fullName>
    <label>Membership Note</label>
    <length>100</length>
    <type>Text</type>
</CustomField>