common/force-app/main/default/objects/Membership__c/fields/Membership_Status__c.field-meta.xml
<CustomField>
    <fullName>Membership_Status__c</fullName>
    <formula>IF (End_Date__c &gt;= Today(), &apos;Active&apos; ,&apos;Inactive&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Status</label>
    <type>Text</type>
</CustomField>