common/force-app/main/default/objects/Membership__c/fields/Term_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Term_in_Months__c</fullName>
    <defaultValue>IF( $RecordType.Name = &apos;Wholesale&apos;, 24, 12)</defaultValue>
    <label>Term in Months</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>