common/force-app/main/default/objects/Membership__c/fields/TEST__c.field-meta.xml
<CustomField>
    <fullName>TEST__c</fullName>
    <label>TEST</label>
    <summarizedField>Membership_Renewal__c.End_Date__c</summarizedField>
    <summaryForeignKey>Membership_Renewal__c.Membership__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>