common/force-app/main/default/objects/Membership__c/fields/Time_Until_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Time_Until_End_Date__c</fullName>
    <formula>End_Date__c-TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Until End Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>