common/force-app/main/default/objects/Membership__c/fields/Total_Investment__c.field-meta.xml
<CustomField>
    <fullName>Total_Investment__c</fullName>
    <formula>Account__r.Total_Investment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Investment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>