common/force-app/main/default/objects/Membership__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wholesale</fullName>
            </value>
            <value>
                <fullName>EIC - Property</fullName>
            </value>
            <value>
                <fullName>EIC - Start up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>