common/force-app/main/default/objects/Membership__c/recordTypes/Platinum_Partner.recordType-meta.xml
<RecordType>
    <fullName>Platinum_Partner</fullName>
    <active>true</active>
    <label>Platinum Partner</label>
</RecordType>