common/force-app/main/default/objects/Membership__c/recordTypes/Wholesale.recordType-meta.xml
<RecordType>
    <fullName>Wholesale</fullName>
    <active>true</active>
    <label>Wholesale/EIC</label>
</RecordType>